<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:nongmo="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_search"
	    android:icon="@drawable/ic_action_search"
	    android:title="@string/search"
	    nongmo:showAsAction="ifRoom|collapseActionView"
	    nongmo:actionViewClass="android.support.v7.widget.SearchView"/>
	
	<item android:id="@+id/action_store"
	    android:title="@string/upgrade"
	    android:showAsAction="never"/>
	
	<item android:id="@+id/action_review"
	    android:title="@string/review"
	    android:showAsAction="never"/>
    
    <item android:id="@+id/action_clear_history"
        android:title="@string/clear_history"/>
    
    <item android:id="@+id/action_buy_veggies"
        android:title="@string/buy_veggies"
        android:showAsAction="never"/>
    
    <item android:id="@+id/action_more_about_gmos"
        android:title="@string/more_about_gmos"/>
</menu>
