<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/loading_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/loading_text_message"
        android:textColor="#ddd" />

    <ProgressBar
        android:id="@+id/circle_loading_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loading_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/corn128" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/download_text_message"
        android:layout_marginTop="30dp"
        android:text="@string/company_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ddd" />

    <TextView
        android:id="@+id/download_text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ddd" />

    <ProgressBar
        android:id="@+id/loading_progression_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loading_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:max="23"
        android:minWidth="240dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/percent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loading_progression_bar"
        android:layout_below="@+id/loading_progression_bar"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/downloading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerInParent="true"
        android:layout_marginBottom="39dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/loading_text_label"
        android:textColor="#ddd"
        android:visibility="gone" />

</RelativeLayout>
